--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,26 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Heyeong Jo - web developer" />
+    <meta name="title" content="Hoyeong Jo - Web Developer" />
+    <meta name="description" content="Welcome to my portfolio" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="%PUBLIC_URL%" />
+    <meta property="og:title" content="Hoyeong Jo - Web Developer" />
+    <meta property="og:description" content="Welcome to my portfolio" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
+    <meta property="og:site_name" content="Hoyeong Jo - Web Developer" />
+
+    <meta name="twitter:url" content="%PUBLIC_URL%" />
+    <meta name="twitter:title" content="Hoyeong Jo - Web Developer" />
+    <meta name="twitter:description" content="Welcome to my portfolio" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo.png" />
+    <meta
+      name="keywords"
+      content="web, developer, web developer, 개발자, 웹 개발자, nodejs, 조호영"
+    />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
